# rocketride-server

./: .coderabbit.yaml  .config  .cursorrules  .env.template  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitleaks.toml  .gitleaksignore  .prettierignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  GOVERNANCE.md  LICENSE  NOTICE  README.md  RELEASE.md  SECURITY.md  builder  builder.cmd  c.bat  claude.md  codecov.yml  conftest.py  deadlock.txt  eslint.config.mjs  glama.json  instruct.txt  lefthook.yml  log.txt  new_node.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pr_body.md  pyproject.toml  renovate.json  sentiment.pipe  (+4 more)
.devcontainer/: devcontainer-lock.json  devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SUPPORT.md  copilot-instructions.md  dependabot.yml  labeler.yml
benchmarks/: .gitignore  .ruff.toml  README.md  bench_5way.py  bench_chonkie.py  bench_chunking.py  bench_cold_start.py  bench_comparative.py  bench_cost.py  bench_cost_efficiency.py  bench_e2e_latency.py  bench_embedding.py  bench_freshness.py  bench_haystack.py  bench_hybrid_search.py  bench_indexing.py  bench_langchain.py  bench_large_scale.py  bench_llamaindex.py  bench_memory.py  bench_native_retrieval.py  bench_parsing.py  bench_recall.py  bench_retrieval_v2.py  bench_rocketride.py  bench_scale.py  bench_scale_constrained.py  bench_streaming_throughput.py  chunkers.py  datasets.py  docker_scale_test.sh  download_datasets.py  generate_docs.py  requirements.txt  (+2 more)
nodes/src/nodes/preprocessor_native/: CMakeLists.txt  Makefile  native_chunker.cpp  native_indexer.cpp
nodes/src/nodes/preprocessor_native/.cache/clangd/index/: bindings.cpp.F8E3D4007D96681C.idx  chunker.cpp.7CE14B60B5FBA48D.idx  chunker.h.4DAAA39DCB9FBE2A.idx  indexer.cpp.46171B739D426209.idx  test_chunker.cpp.974AE589D5F14F02.idx  test_indexer.cpp.92FBF95AF8EFFA76.idx
nodes/src/nodes/preprocessor_native/python/: bindings.cpp  test_native.py
nodes/src/nodes/preprocessor_native/src/: chunker.cpp  chunker.h  indexer.cpp  indexer.h
nodes/src/nodes/preprocessor_native/tests/: test_chunker.cpp  test_indexer.cpp
(+2713 files in other folders)
